--- a/app/src/main/res/drawable/radius_10_hollow.xml
+++ b/app/src/main/res/drawable/radius_10_hollow.xml
@@ -2,10 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="10dp" />
-    <solid android:color="@android:color/white"/>
-    <stroke
-        android:width="2dp"
-        android:color="#E880A3" />
+    <solid android:color="#FFE8F0"/>
     <padding
         android:bottom="4dp"
         android:left="4dp"
