--- a/app/src/main/res/layout/audio_list_dialog.xml
+++ b/app/src/main/res/layout/audio_list_dialog.xml
@@ -52,6 +52,7 @@
             android:paddingBottom="@dimen/list_item_spacing_half"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
             app:layout_constraintVertical_bias="0"
