--- a/app/src/main/res/layout/custom_song_list_fragment.xml
+++ b/app/src/main/res/layout/custom_song_list_fragment.xml
@@ -26,7 +26,6 @@
             app:contentScrim="?attr/colorSurface"
             app:layout_scrollFlags="scroll|exitUntilCollapsed"
             app:statusBarScrim="?attr/colorSurface"
-            app:title="@{}"
             app:titleEnabled="false"
             app:toolbarId="@id/toolbar">
 
@@ -37,7 +36,8 @@
                 android:fitsSystemWindows="true"
                 app:collapsedTitleGravity="center"
                 app:collapsedTitleTextAppearance="@style/TextAppearance.Sunflower.Toolbar.Text"
-                app:contentScrim="?attr/colorSurface"
+                app:contentScrim="#FF91B4"
+                android:background="@color/white"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed"
                 app:statusBarScrim="?attr/colorSurface"
                 app:title="@{songListBean.name}"
@@ -46,34 +46,39 @@
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="250dp"
+                    android:layout_height="220dp"
                     android:fitsSystemWindows="true"
                     app:layout_collapseMode="parallax">
 
                     <ImageView
                         android:id="@+id/imageView6"
-                        urlAlbum="@{songListBean.coverImage}"
+                        urlAlbum2="@{songListBean.coverImage}"
                         android:layout_width="150dp"
                         android:layout_height="150dp"
                         android:layout_marginStart="16dp"
+                        android:layout_marginTop="60dp"
+                        android:scaleType="fitXY"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="0.7"
-                        tools:src="@tools:sample/avatars"
-                        android:contentDescription="TODO" />
+                        app:layout_constraintVertical_bias="0.35000002"
+                        tools:src="@tools:sample/avatars" />
 
                     <TextView
                         android:id="@+id/textView10"
-                        android:layout_width="wrap_content"
+                        style="@style/text_oneLine"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_marginStart="42dp"
-                        android:textSize="24sp"
+                        android:layout_marginStart="32dp"
+                        android:layout_marginEnd="8dp"
                         android:text="@{songListBean.name}"
+                        android:textSize="20sp"
                         app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
                         app:layout_constraintStart_toEndOf="@+id/imageView6"
                         app:layout_constraintTop_toTopOf="@+id/imageView6"
-                        app:layout_constraintVertical_bias="0.0"
+                        app:layout_constraintVertical_bias="0.100000024"
                         tools:text="歌单名字" />
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -89,39 +94,26 @@
                     app:titleTextColor="?attr/colorOnSurface" />
             </com.google.android.material.appbar.CollapsingToolbarLayout>
         </com.google.android.material.appbar.AppBarLayout>
+
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:clipToPadding="false"
-            android:paddingBottom="70dp"
+            android:paddingVertical="10dp"
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
-            <androidx.constraintlayout.widget.ConstraintLayout
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_songList"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_margin="18dp">
-
-                <TextView
-                    android:id="@+id/tv_playAll"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:text="@string/playAll"
-                    android:textAppearance="?attr/textAppearanceHeadline5"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rv_songList"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:minHeight="500dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_playAll" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:minHeight="600dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:listitem="@layout/list_item_search"/>
         </androidx.core.widget.NestedScrollView>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
