--- a/app/src/main/res/layout/fragment_local_song.xml
+++ b/app/src/main/res/layout/fragment_local_song.xml
@@ -15,19 +15,29 @@
         tools:context=".ui.main.songListFragment.LocalSongFragment">
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/play_all"
             style="@style/text_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:gravity="center"
             android:text="全部播放"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless"
             app:layout_constraintBottom_toBottomOf="@+id/btn_scan"
+            app:layout_constraintEnd_toStartOf="@+id/btn_scan"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <Button
             android:id="@+id/btn_scan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="32dp"
+            android:background="@drawable/radius_10_hollow"
+            android:backgroundTint="#ffffff"
             android:text="扫描本地歌曲"
+            app:layout_constraintBottom_toTopOf="@+id/rvLocalSong"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
