--- a/app/src/main/res/layout/list_item_work1.xml
+++ b/app/src/main/res/layout/list_item_work1.xml
@@ -15,24 +15,24 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:onClick="@{clickListener}"
         android:elevation="5dp"
         android:layout_margin="5dp"
+        android:foreground="?android:attr/selectableItemBackgroundBorderless"
         android:background="@drawable/radius_10_hollow">
 
         <ImageView
             android:id="@+id/imageView3"
             url="@{vmWork1.imageId}"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             app:layout_constraintBottom_toTopOf="@+id/textView4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@mipmap/n1"
-            android:contentDescription="TODO" />
+            tools:srcCompat="@mipmap/album2"/>
 
         <TextView
             android:id="@+id/textView4"
