--- a/app/src/main/res/layout/audio_list_dialog.xml
+++ b/app/src/main/res/layout/audio_list_dialog.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent">
 
         <LinearLayout
-            android:padding="4dp"
+            android:gravity="center_vertical"
             android:id="@+id/linearLayout4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,7 +35,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{mainVm.playModeText}"
-                android:textSize="25sp"
+                style="@style/text_oneLine_18"
                 tools:text="播放模式"
                 android:layout_marginVertical="10dp"
                 app:layout_constraintStart_toStartOf="parent"
