--- a/app/src/main/res/layout/list_item_search.xml
+++ b/app/src/main/res/layout/list_item_search.xml
@@ -12,17 +12,16 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
         android:elevation="10dp"
         android:layout_margin="5dp"
-        android:foreground="?android:attr/selectableItemBackgroundBorderless"
         android:background="@drawable/radius_10_hollow">
 
         <LinearLayout
             android:id="@+id/ll_play"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="50dp"
             android:orientation="vertical"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_other"
             app:layout_constraintStart_toStartOf="parent"
@@ -51,6 +50,7 @@
             android:layout_height="50dp"
             android:background="@mipmap/aca"
             android:scaleType="fitXY"
+            android:foreground="?android:attr/selectableItemBackgroundBorderless"
             app:layout_constraintBottom_toBottomOf="@+id/ll_play"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@+id/ll_play" />
