--- a/app/src/main/res/layout/list_item_songlist.xml
+++ b/app/src/main/res/layout/list_item_songlist.xml
@@ -49,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
-            android:text='@{(bean.list!=null?bean.list.size():0)+"首"}'
+            android:text='@{bean.number+"首"}'
             app:layout_constraintEnd_toEndOf="@+id/textView7"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/textView7"
