--- a/app/src/main/res/layout/audio_list_dialog_item.xml
+++ b/app/src/main/res/layout/audio_list_dialog_item.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="pvm"
-            type="com.example.echo_kt.data.AudioBean" />
+            type="com.example.echo_kt.data.SongBean" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,7 +26,7 @@
             android:maxEms="6"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="@{pvm.name}"
+            android:text="@{pvm.songName}"
             android:textSize="15sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -40,7 +40,7 @@
             android:ellipsize="end"
             android:maxEms="5"
             android:maxLines="1"
-            android:text="@{pvm.singer}"
+            android:text="@{pvm.author}"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="@+id/item_tv_music"
             app:layout_constraintStart_toEndOf="@+id/item_tv_music"
