--- a/app/src/main/res/layout/bottom_dialog_song.xml
+++ b/app/src/main/res/layout/bottom_dialog_song.xml
@@ -39,6 +39,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_singerName"
             app:layout_constraintVertical_bias="0.0"
-            tools:listitem="@layout/list_item_work1" />
+            tools:listitem="@layout/list_item_work1"
+            tools:itemCount="4"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
