--- a/app/src/main/res/layout/fragment_history_song.xml
+++ b/app/src/main/res/layout/fragment_history_song.xml
@@ -31,9 +31,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/linearLayout"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            tools:listitem="@layout/list_item_search">
-
-        </androidx.recyclerview.widget.RecyclerView>
+            tools:listitem="@layout/list_item_search"/>
 
         <TextView
             android:layout_width="match_parent"
@@ -59,31 +57,16 @@
             <TextView
                 android:id="@+id/tvPlayAll"
                 style="@style/text_title"
+                android:textSize="18sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="2dp"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="1dp"
+                android:drawableEnd="@mipmap/playall"
                 android:foreground="?android:attr/selectableItemBackgroundBorderless"
                 android:onClick="@{onClickPlayAll}"
                 android:text="全部播放"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/tvUpdatePath"
-                style="@style/text_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="2dp"
-                android:foreground="?android:attr/selectableItemBackgroundBorderless"
-                android:onClick="@{onClickUpdate}"
-                android:text="更新播放地址"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
