--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -51,68 +51,102 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <LinearLayout
-            android:padding="5dp"
+        <Switch
+            android:id="@+id/switchTimeOff"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="50dp"
+            android:checked="@{vmHome.countdownBean.countdownState}"
+            style="@style/text_oneLine_16"
+            android:text="定时关闭"
+            android:background="@drawable/radius_10_hollow"
+            android:backgroundTint="@color/sunflower_gray_50_a600"
+            android:gravity="center_vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
-            android:orientation="vertical">
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
-            <Switch
-                android:padding="5dp"
-                android:id="@+id/switchTimeOff"
-                android:layout_width="match_parent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clSeekBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:visibility="@{!vmHome.countdownBean.countdownState ? View.GONE : View.VISIBLE }"
+            app:layout_constraintEnd_toEndOf="@+id/switchTimeOff"
+            app:layout_constraintStart_toStartOf="@+id/switchTimeOff"
+            app:layout_constraintTop_toBottomOf="@+id/switchTimeOff">
+
+            <SeekBar
+                android:id="@+id/seekBarOff"
+                android:layout_width="240dp"
                 android:layout_height="wrap_content"
-                android:text="定时关闭"
-                android:checked="@{vmHome.countdownBean.countdownState}"/>
+                android:layout_marginStart="24dp"
+                android:max="@{6000000}"
+                android:progress="@{CustomUtilKt.intForLong(vmHome.countdownBean.countdown)}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.9"
+                app:layout_constraintStart_toEndOf="@+id/textView3"
+                app:layout_constraintTop_toTopOf="parent" />
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:padding="5dp"
-                android:id="@+id/clSeekBar"
-                android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="@{!vmHome.countdownBean.countdownState ? View.GONE : View.VISIBLE }">
+                android:text="倒计时"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                <SeekBar
-                    android:id="@+id/seekBarOff"
-                    android:layout_width="240dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="24dp"
-                    android:max="@{6000000}"
-                    android:progress="@{CustomUtilKt.intForLong(vmHome.countdownBean.countdown)}"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.9"
-                    app:layout_constraintStart_toEndOf="@+id/textView3"
-                    app:layout_constraintTop_toTopOf="parent" />
+            <TextView
+                android:id="@+id/countdown"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:text="@{CustomUtilKt.stringForTime(vmHome.countdownBean.countdown)}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/seekBarOff"
+                app:layout_constraintStart_toEndOf="@+id/textView3"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:text="15:00" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
-                <TextView
-                    android:id="@+id/textView3"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="倒计时"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/btn_update"
+            style="@style/text_oneLine_16"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="50dp"
+            android:background="@drawable/radius_10_hollow"
+            android:backgroundTint="@color/sunflower_gray_50_a600"
+            android:gravity="center_vertical"
+            android:text="更新所有音频地址"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/clSeekBar" />
 
-                <TextView
-                    android:id="@+id/countdown"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:text="@{CustomUtilKt.stringForTime(vmHome.countdownBean.countdown)}"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/seekBarOff"
-                    app:layout_constraintStart_toEndOf="@+id/textView3"
-                    app:layout_constraintTop_toTopOf="parent"
-                    tools:text="15:00" />
-            </androidx.constraintlayout.widget.ConstraintLayout>
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:visibility="gone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_update"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_update"
+            app:layout_constraintTop_toTopOf="@+id/btn_update" />
 
-        </LinearLayout>
+        <ImageView
+            android:id="@+id/updateState"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_update"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/btn_update"
+            app:layout_constraintTop_toTopOf="@+id/btn_update"
+            app:srcCompat="@mipmap/ok" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
